--- a/NegotiationGame.v2/Client/wwwroot/index.html
+++ b/NegotiationGame.v2/Client/wwwroot/index.html
@@ -10,6 +10,14 @@
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
     <link rel="apple-touch-icon" sizes="512x512" href="icon-512.png" />
+    <style>
+        html, body {
+            height: 100%;
+        }
+        #app {
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
@@ -27,4 +35,3 @@
 </body>
 
 </html>
-•
